@@ -41,9 +41,11 @@ class Support implements ArrayAccess {
 		\add_action( 'after_setup_theme', [ $this, 'load_translations'	] );
 
 		// Register Default Integrations
-		$this->register( 'markup',				Support\Markup::class	);
-		$this->register( 'styles',				Support\Styles::class	);
-		$this->register( 'starter',				Support\Starter::class	);
+		$this->register( 'starter',				Support\Starter::class	    );
+		$this->register( 'markup',				Support\Markup::class	    );
+		$this->register( 'styles',				Support\Styles::class	    );
+		$this->register( 'files',				Support\FileSystem::class	);
+        // Plugin Integrations
 		$this->register( 'plugin/anr', 			Support\Plugins\ANR::class 			);
 		$this->register( 'plugin/cf7', 			Support\Plugins\CF7::class 			);
 		$this->register( 'plugin/wpseo', 		Support\Plugins\WPSeo::class 		);
